Sat Sep  8 15:32:35 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - dstate.c: Previous update was wrong version. Fixed. Sorry about
   that.

Sat Sep  8 15:23:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - dstate.c, dstate-hal.c: simplified the way how alarms are handled.
   The status_commit() function should not be called *before*
   alarm_commit() to make this work.
 - gamatronic.c: implement the above.

Fri Sep  7 11:51:22 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - fixes the NUT versioning on exported SVN trees, due to i18n
   translation of the "exported" keyword. This resulted in
   <nut version>- instead of <nut version> only, without the "-"

Tue Jul 10 13:47:01 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/libupsclient.pc.in, lib/libupsclient-config.in: fix a typo
   (missing "LIB" prefix on the SSL_*FLAGS)

2.2.0

Thu Jul  5 12:48:39 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 Final polishing:
 - NEWS: remove the reference to docs/packaging.txt
 - INSTALL: add a note about binary packages installation preference
   over source installation 
 - configure.in: bumped version number to 2.2.0

Mon Jul  2 14:47:14 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-hid.c: fix battery.type (static data)
 - configure.in, libupsclient.pc: add some missing variables useful
   for external NUT applications (sysconfdir, statepath, nutuser)
 - hal/20-ups-nut-device.fdi: update unknow manufacturer name

Fri Jun 29 07:19:42 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - libhid.c: fix Notification handling. It previously caused
   false online / on battery fluctuation with newhidups / usbhid-ups
   when no notification was received.

Tue Jun 26 19:39:55 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - docs/new-drivers.txt: Update to reflect changes in the way we
   deal with dstate_dataok() and dstate_datastale(). Historically
   it was needed to call these regularly, to prevent staleness